Add data fetching

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
   <title>Chart the Stock Market</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="graph"></div>
+  <form>
+    <input type="text">
+    <button type="submit">Search</button>
+  </form>
+  <div id="symb"></div>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/bundle.js"></script>
 </body>
