--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,10 @@
   <div class="container">
     <div id="graph"></div>
     <form>
-      <input type="text" autofocus />
+      <input type="text" autofocus placeholder="Input ticker symbol"/>
       <button type="submit">Search</button>
     </form>
+    <div id="toast"></div>
     <div id="symb" class="symbols"></div>
   </div>
   <script src="/socket.io/socket.io.js"></script>
