Refactor resizing function

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <title>Chart the Stock Market</title>
 </head>
 <body>
+  <header>Stocks</header>
   <div class="container">
     <div id="graph"></div>
     <form>
@@ -16,6 +17,12 @@
     <div id="toast"></div>
     <div id="symb" class="symbols"></div>
   </div>
+  <footer>
+    <div>Full stack project for <a href="https://www.freecodecamp.com/" target="_blank">FreeCodeCamp</a>.</div>
+    <div>
+      Quotes by <a href="https://www.quandl.com/" target="_blank">Quandl</a>.
+      Source code on <a href="https://github.com/jenovs/fcc-chart-stock-market" target="_blank">GitHub</a>.</div>
+  </footer>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/bundle.js"></script>
 </body>
